--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Austin House Guide</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Go Time!" />
+  <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
