--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Go Time!" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
